--- a/6_2_AlgoritmoGeneticoBasico.ipynb
+++ b/6_2_AlgoritmoGeneticoBasico.ipynb
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a5e4aece",
+   "id": "2c01bfbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c04248f0",
+   "id": "4ca2bacb",
    "metadata": {},
    "source": [
     "### Operador cruza"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6eb5ddd4",
+   "id": "56de34c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98da6ac6",
+   "id": "96521b39",
    "metadata": {},
    "source": [
     "### Operador de mutacion"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a80466d4",
+   "id": "102a26c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89ef4b2d",
+   "id": "b19d661c",
    "metadata": {},
    "source": [
     "### función de aptitud"
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a64551cd",
+   "id": "f0d25393",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fc320685",
+   "id": "cfd14639",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0cfb4071",
+   "id": "62e1e65f",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "30d2a5bb",
+   "id": "ccf51a01",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7a087292",
+   "id": "61ee2e79",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77ab5833",
+   "id": "aab908b2",
    "metadata": {},
    "source": [
     "### Operador de selección"
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3e8c4c6a",
+   "id": "14105b06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e3ebadce",
+   "id": "dfd7ef98",
    "metadata": {},
    "outputs": [
     {
@@ -306,16 +306,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2cec54a",
+   "id": "7f995cee",
    "metadata": {},
    "source": [
-    "### Algoritmo genético simple"
+    "### Ejercicio: Probar con diferentes tamaños del torneo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39aa25bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa8beeb7",
+   "metadata": {},
+   "source": [
+    "## Algoritmo genético simple"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ede40445",
+   "id": "0b7a7030",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d6f4cbd",
+   "id": "049be2a0",
    "metadata": {},
    "source": [
     "### Ejercicio: explorar numericamente las funciones de arriba, en particular, binary encode, binary decode, one_point_crossover y bit_flip_mutation."
@@ -373,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3d8bcd93",
+   "id": "c6e6ef91",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bd0f07d",
+   "id": "690bab5c",
    "metadata": {},
    "source": [
     "### Pregunta: ¿Dónde se lleva a cabo el mapeo fenotipo-genotipo?"
@@ -400,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b2aa6cd",
+   "id": "2c148a15",
    "metadata": {},
    "source": [
     "## Utilizar las operaciones previas para optimizar una función."
@@ -409,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "af3bfd10",
+   "id": "2799cca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d20add98",
+   "id": "345ef4ef",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d54b68f8",
+   "id": "bca20c02",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fb6ca0c0",
+   "id": "70cf8147",
    "metadata": {},
    "outputs": [
     {
@@ -653,9 +669,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b921379",
+   "metadata": {},
+   "source": [
+    "Mencionar relación con el teorema del esquema."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "652de860",
+   "id": "0ff909ac",
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9febfa4a",
+   "id": "85ab7087",
    "metadata": {},
    "source": [
     "### Práctica: Utilizar el código anterior para optimizar otra función. \n",
@@ -725,24 +749,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65d9562",
+   "id": "eb3a6919",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5b9088ba",
+   "id": "b4d2379f",
    "metadata": {},
    "source": [
     "## Problema de la mochila\n",
+    "\n",
+    "Dado un conjunto de elementos, cada uno con un peso y un valor, determinar qué elementos incluir en la colección para que el peso total sea menor o igual que un límite dado y el valor total sea lo mayor posible.\n",
+    "\n",
     "![](https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Knapsack.svg/729px-Knapsack.svg.png)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "40c11470",
+   "id": "7c4663b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,15 +835,13 @@
     "            mutated_individual += '1' if bit == '0' else '0'\n",
     "        else:\n",
     "            mutated_individual += bit\n",
-    "    return mutated_individual\n",
-    "\n",
-    "\n"
+    "    return mutated_individual"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c865b549",
+   "id": "1aa1c582",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7f27025f",
+   "id": "65679988",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,23 +903,24 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "6babe04e",
+   "id": "205f9156",
    "metadata": {},
    "outputs": [],
    "source": [
-    "capacity = 50\n",
+    "capacity = 50 # capacidad maxima mochila\n",
     "pop_size = 100\n",
     "num_generations = 50\n",
     "mutation_rate = 0.1\n",
     "tournament_size = 5\n",
     "\n",
-    "best_individual, best_fitness = genetic_algorithm(objects, capacity, pop_size, num_generations, mutation_rate, tournament_size)"
+    "best_individual, best_fitness = genetic_algorithm(objects, capacity, pop_size, num_generations, \n",
+    "                                                  mutation_rate, tournament_size)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "925332cb",
+   "id": "c1247cef",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79096aa1",
+   "id": "88c0cd3e",
    "metadata": {},
    "outputs": [],
    "source": []
