--- a/6_2_AlgoritmoGeneticoBasico.ipynb
+++ b/6_2_AlgoritmoGeneticoBasico.ipynb
@@ -48,6 +48,12 @@
     "- Bit flip\n",
     "![](https://raw.githubusercontent.com/igomezv/ComputoEvolutivo/main/img/flipping.png)\n",
     "\n",
+    "## Selección\n",
+    "\n",
+    "Torneo k\n",
+    "![](https://miro.medium.com/v2/resize:fit:640/format:webp/1*5DCk1FLuyGRFf9kjIfKJjw.jpeg)\n",
+    "Más detalles de operadores de selección: https://medium.datadriveninvestor.com/genetic-algorithms-selection-5634cfc45d78\n",
+    "\n",
     "## Mapeo fenotipo-genotipo\n",
     "\n",
     "![](https://miro.medium.com/v2/resize:fit:4800/format:webp/1*PQiFGfOFZNmObucZCa7cwg.png)\n",
