--- a/6_1_Antecedentes.ipynb
+++ b/6_1_Antecedentes.ipynb
@@ -29,11 +29,11 @@
     "![](https://cdn.kastatic.org/ka-perseus-images/8f33aa4bd39c5c435af5e5dc4001d73721a25f85.png)\n",
     "Fuente: Khan academy.\n",
     "\n",
-    "### Explorar: \n",
-    "\n",
-    "- https://chriscummins.cc/s/genetics/# \n",
+    "### Ejercicio. Explorar: \n",
     "\n",
     "- https://rednuht.org/genetic_cars_2/\n",
+    "\n",
+    "- https://chriscummins.cc/s/genetics/# \n",
     "\n",
     "\n",
     "### Ejercicio: Generar una población aleatoria, generar cruzas y mutaciones a lo largo de varias generaciones.\n",
