--- a/6_2_AlgoritmoGeneticoBasico.ipynb
+++ b/6_2_AlgoritmoGeneticoBasico.ipynb
@@ -949,9 +949,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c103a7d",
+   "metadata": {},
+   "source": [
+    "### Ejercicio. Explorar otra vez y explicar mejor: \n",
+    "\n",
+    "- https://rednuht.org/genetic_cars_2/\n",
+    "\n",
+    "- https://chriscummins.cc/s/genetics/# "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88c0cd3e",
+   "id": "de95554f",
    "metadata": {},
    "outputs": [],
    "source": []
