--- a/6_2_AlgoritmoGeneticoBasico.ipynb
+++ b/6_2_AlgoritmoGeneticoBasico.ipynb
@@ -950,7 +950,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c103a7d",
+   "id": "d0483216",
+   "metadata": {},
+   "source": [
+    "### Ejercicio. Probar código y algoritmo genético con otros objetos y describir los resultados de lo que podría guardarse en la mochila."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17266013",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10720afc",
    "metadata": {},
    "source": [
     "### Ejercicio. Explorar otra vez y explicar mejor: \n",
@@ -963,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de95554f",
+   "id": "28240db6",
    "metadata": {},
    "outputs": [],
    "source": []
