--- a/6_2_AlgoritmoGeneticoBasico.ipynb
+++ b/6_2_AlgoritmoGeneticoBasico.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Algoritmo genético básico\n",
     "\n",
+    "## Pseudocódigo de un algoritmo genético simple\n",
+    "\n",
     "START\n",
     "\n",
     "Generate the initial population\n",
@@ -62,6 +64,28 @@
     "\n",
     "![](https://www.tutorialspoint.com/genetic_algorithms/images/pheno_genotype_space.jpg)\n",
     "Fuente: https://www.tutorialspoint.com/genetic_algorithms/genetic_algorithms_quick_guide.htm\n",
+    "\n",
+    "## Teorema del esquema\n",
+    "\n",
+    "**Ejemplo de un esquema (posible solución) de longitud  6: $1**0*1$.**\n",
+    "\n",
+    "Dado un problema de optimización y un conjunto de soluciones $S$, sea $f: S \\rightarrow \\mathbb{R}$ la función de aptitud. Sea $M$ el tamaño de la población y $p_c$ y $p_m$ las probabilidades de cruzamiento y mutación, respectivamente. Si se cumple lo siguiente:\n",
+    "\n",
+    "\n",
+    "- El tamaño de la población $M$ es lo suficientemente grande.\n",
+    "- La probabilidad de cruzamiento $p_c$ es lo suficientemente grande.\n",
+    "- La probabilidad de mutación $p_m$ es lo suficientemente pequeña.\n",
+    "- La selección de los padres se hace mediante selección por ruleta, donde la probabilidad de ser seleccionado es proporcional a la aptitud relativa.\n",
+    "- El operador de cruzamiento produce soluciones que son en promedio mejores que las soluciones originales.\n",
+    "- El operador de mutación permite la exploración del espacio de búsqueda.\n",
+    "\n",
+    "\n",
+    "Entonces, en cada iteración, la calidad de la mejor solución en la población aumenta o permanece constante.\n",
+    "\n",
+    "$P(t+1) \\geq (1-\\epsilon) P(t)$, \n",
+    "\n",
+    "donde $P(t)$ es la probabilidad de que la mejor solución de la población en la iteración $t$ sea seleccionada para la siguiente generación, y $\\epsilon$ es una constante positiva que depende de los parámetros del algoritmo genético y del problema en cuestión. Esta ecuación establece que la probabilidad de que la mejor solución se seleccione en la próxima generación es mayor o igual que una fracción de la probabilidad de que se seleccione en la generación actual. En otras palabras, la calidad de la mejor solución en la población no puede disminuir en cada iteración, sino que debe mantenerse o mejorar.\n",
+    "\n",
     "\n",
     "## Ejemplos\n",
     "\n",
