--- a/6_2_AlgoritmoGeneticoBasico.ipynb
+++ b/6_2_AlgoritmoGeneticoBasico.ipynb
@@ -221,8 +221,8 @@
      "output_type": "stream",
      "text": [
       "Después de la cruza:\n",
-      "Hijo 1: ['0', '1', '1', '0', '0', '1', '1', '0']\n",
-      "Hijo 2: ['1', '0', '0', '1', '1', '0', '0', '1']\n"
+      "Hijo 1: ['0', '1', '0', '1', '1', '0', '1', '0']\n",
+      "Hijo 2: ['1', '0', '1', '0', '0', '1', '0', '1']\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
      "output_type": "stream",
      "text": [
       "Antes de la mutación: ['0', '1', '1', '0', '1', '0', '0', '1']\n",
-      "Después de la mutación: 01101100\n",
+      "Después de la mutación: 01110001\n",
       "Fitness del cromosoma original: 4\n",
       "Fitness del cromosoma mutado: 4\n"
      ]
@@ -319,7 +319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected parent 1: ['0', '1', '1', '0', '0', '1', '0', '1']\n",
+      "Selected parent 1: ['1', '0', '0', '1', '1', '0', '1', '0']\n",
       "Selected parent 2: ['0', '1', '1', '0', '0', '1', '0', '1']\n"
      ]
     }
@@ -524,7 +524,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Poly3DCollection at 0x7f5887237400>"
+       "<mpl_toolkits.mplot3d.art3d.Poly3DCollection at 0x7ff0f8aeba30>"
       ]
      },
      "execution_count": 16,
@@ -567,50 +567,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000\n",
-      "0011\n",
+      "0000\n",
+      "1100\n",
+      "1101\n",
+      "0001\n",
       "1011\n",
+      "0011\n",
       "0111\n",
-      "1111\n",
-      "0001\n",
       "0100\n",
-      "0101\n",
+      "0010\n",
       "0011\n",
-      "0000\n",
-      "0110\n",
-      "1110\n",
-      "0101\n",
-      "0011\n",
-      "0100\n",
-      "0000\n",
-      "1111\n",
-      "0100\n",
-      "0100\n",
-      "0011\n",
-      "1110\n",
-      "0011\n",
+      "1000\n",
       "1101\n",
-      "1100\n",
-      "1111\n",
       "1010\n",
-      "1101\n",
-      "1110\n",
-      "1100\n",
+      "1000\n",
+      "0010\n",
       "0100\n",
-      "0111\n",
+      "1101\n",
+      "0000\n",
+      "1101\n",
+      "0010\n",
+      "1010\n",
+      "0000\n",
+      "1110\n",
       "1111\n",
-      "1101\n",
-      "0011\n",
-      "0110\n",
-      "1101\n",
+      "0101\n",
+      "0000\n",
+      "1011\n",
+      "0000\n",
+      "0010\n",
+      "0000\n",
       "1001\n",
+      "0010\n",
+      "1011\n",
+      "0010\n",
+      "1000\n",
       "1010\n",
-      "0001\n",
       "0110\n",
-      "Generación 1: Mejor individuo: 01000011 (2)\n",
-      "Generación 2: Mejor individuo: 01000010 (1)\n",
+      "0011\n",
+      "1101\n",
+      "0010\n",
+      "Generación 1: Mejor individuo: 00100011 (2)\n",
+      "Generación 2: Mejor individuo: 00100011 (2)\n",
       "Generación 3: Mejor individuo: 01000010 (1)\n",
-      "Generación 4: Mejor individuo: 00110010 (0)\n",
+      "Generación 4: Mejor individuo: 01000010 (1)\n",
       "Generación 5: Mejor individuo: 00110010 (0)\n",
       "Generación 6: Mejor individuo: 00110010 (0)\n",
       "Generación 7: Mejor individuo: 00110010 (0)\n",
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "7c4663b8",
    "metadata": {},
    "outputs": [],
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "1aa1c582",
    "metadata": {},
    "outputs": [],
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "65679988",
    "metadata": {},
    "outputs": [],
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "205f9156",
    "metadata": {},
    "outputs": [],
@@ -953,17 +953,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "c1247cef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1111111011'"
+       "'1111111111'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
