--- a/6_3_CodificacionReal.ipynb
+++ b/6_3_CodificacionReal.ipynb
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4f1f68b0",
+   "id": "9a90f630",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ce8c7078",
+   "id": "7016e5e3",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ade89e17",
+   "id": "81b0a843",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0692812c",
+   "id": "e9c3516f",
    "metadata": {},
    "source": [
     "| Ventajas del escalamiento en codificación real | Descripción                                              |\n",
@@ -156,20 +156,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94f9f092",
+   "id": "1a3103ef",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "046d94c4",
+   "id": "b3d8ff67",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a98e2da8",
+   "id": "82536801",
    "metadata": {},
    "source": [
     "## Operadores genéticos para representación real\n",
@@ -182,13 +182,34 @@
     "\n",
     "### Operador  de cruza\n",
     "\n",
+    "| Operador de Cruce     | Descripción                                       | Implementación en Python                                 |\n",
+    "|-----------------------|---------------------------------------------------|----------------------------------------------------------|\n",
+    "| Cruce Aritmético      | Combina los genes de los padres mediante una media ponderada o una combinación lineal. | ```child = alpha * parent1 + (1 - alpha) * parent2```   |\n",
+    "| Cruce Discreto        | Combina los genes de los padres seleccionando aleatoriamente un gen de uno de los padres. | ```child_gene = random.choice([parent1_gene, parent2_gene])``` |\n",
+    "\n",
+    "#### Ejercicio: Implementar ambos operadores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9da278cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2d972d7",
+   "metadata": {},
+   "source": [
     "### Operador de mutación"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d0fa4887",
+   "id": "ab02ad39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,8 +218,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "fc8670a3",
+   "execution_count": 29,
+   "id": "b7d6531b",
    "metadata": {},
    "outputs": [
     {
@@ -206,8 +227,9 @@
      "output_type": "stream",
      "text": [
       "Mejor solución encontrada:\n",
-      "Individuo: [0.11914542366574402, 0.12138795297370579, 0.11655266159643773, 0.12232189090736847, 0.1200005620618276]\n",
-      "Aptitud: 18.008696883410806\n"
+      "Individuo codificado: [0.6771893047886117, 0.21381750296008517, 0.12456870883105164, 0.8749091090974098, 0.8759811199492819]\n",
+      "Individuo decodificado: [0.6771893047886117, 0.21381750296008517, 0.12456870883105164, 0.8749091090974098, 0.8759811199492819]\n",
+      "Aptitud: 93.58072473337985\n"
      ]
     }
    ],
@@ -246,15 +268,16 @@
     "        return valor_total\n",
     "\n",
     "# Inicialización de la población\n",
-    "poblacion = [[random.random() for _ in range(len(pesos))] for _ in range(tamaño_poblacion)]\n",
+    "poblacion = [[random.uniform(rango_min, rango_max) for _ in range(len(pesos))] for _ in range(tamaño_poblacion)]\n",
+    "poblacion_codificada = [codificar(individuo) for individuo in poblacion]\n",
     "\n",
     "# Evolución de la población\n",
     "for generacion in range(100):\n",
     "    # Evaluación de la aptitud de la población\n",
-    "    aptitudes = [calcular_aptitud(individuo) for individuo in poblacion]\n",
+    "    aptitudes = [calcular_aptitud(individuo) for individuo in poblacion_codificada]\n",
     "    \n",
     "    # Selección de padres mediante selección proporcional a la aptitud (ruleta)\n",
-    "    padres = random.choices(poblacion, weights=aptitudes, k=tamaño_poblacion)\n",
+    "    padres = random.choices(poblacion_codificada, weights=aptitudes, k=tamaño_poblacion)\n",
     "    \n",
     "    # Cruzamiento de los padres para generar descendencia\n",
     "    descendencia = []\n",
@@ -264,26 +287,31 @@
     "        hijo2 = padre2[:punto_corte] + padre1[punto_corte:]\n",
     "        descendencia.extend([hijo1, hijo2])\n",
     "    \n",
-    "    # Mutación de la descendencia\n",
-    "    for individuo in descendencia:\n",
-    "        if random.random() < tasa_mutacion:\n",
-    "            indice_gen = random.randint(0, len(pesos) - 1)\n",
-    "            individuo[indice_gen] = random.random()\n",
-    "    \n",
-    "    # Reemplazo de la población anterior con la descendencia\n",
-    "    poblacion = descendencia\n",
+    "# Mutación de la descendencia\n",
+    "for individuo in descendencia:\n",
+    "    if random.random() < tasa_mutacion:\n",
+    "        indice_gen = random.randint(0, len(pesos) - 1)\n",
+    "        individuo[indice_gen] = random.uniform(rango_min, rango_max)\n",
+    "\n",
+    "# Reemplazo de la población anterior con la descendencia\n",
+    "poblacion_codificada = descendencia\n",
+    "\n",
+    "# Decodificar la población\n",
+    "poblacion_decodificada = [decodificar(individuo_codificado) for individuo_codificado in poblacion_codificada]\n",
+    "\n",
+    "# Evaluación de la aptitud de la población\n",
+    "aptitudes = [calcular_aptitud(individuo) for individuo in poblacion_decodificada]\n",
     "\n",
     "# Selección del mejor individuo\n",
-    "mejor_individuo = max(poblacion, key=calcular_aptitud)\n",
-    "mejor_aptitud = calcular_aptitud(mejor_individuo)\n",
-    "\n",
-    "# Decodificar el mejor individuo\n",
-    "mejor_solucion = decodificar(mejor_individuo)\n",
+    "mejor_individuo_codificado = poblacion_codificada[max(range(tamaño_poblacion), key=lambda i: aptitudes[i])]\n",
+    "mejor_solucion_codificado = mejor_individuo_codificado\n",
+    "mejor_solucion_decodificado = decodificar(mejor_individuo_codificado)\n",
+    "mejor_aptitud = calcular_aptitud(mejor_solucion_decodificado)\n",
     "\n",
     "# Mostrar resultados\n",
     "print(\"Mejor solución encontrada:\")\n",
-    "print(\"Individuo codificado:\", mejor_individuo)\n",
-    "print(\"Individuo decodificado:\", mejor_solucion)\n",
+    "print(\"Individuo codificado:\", mejor_solucion_codificado)\n",
+    "print(\"Individuo decodificado:\", mejor_solucion_decodificado)\n",
     "print(\"Aptitud:\", mejor_aptitud)\n",
     "\n"
    ]
@@ -291,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "761e76d8",
+   "id": "cb0a85f7",
    "metadata": {},
    "outputs": [],
    "source": []
