--- a/6_3_CodificacionReal.ipynb
+++ b/6_3_CodificacionReal.ipynb
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9a90f630",
+   "id": "a130c5eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7016e5e3",
+   "id": "30f07c55",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "81b0a843",
+   "id": "53237e99",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9c3516f",
+   "id": "ab7e3f4e",
    "metadata": {},
    "source": [
     "| Ventajas del escalamiento en codificación real | Descripción                                              |\n",
@@ -156,20 +156,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a3103ef",
+   "id": "7097de84",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b3d8ff67",
+   "id": "ef4b376d",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "82536801",
+   "id": "d82ae93d",
    "metadata": {},
    "source": [
     "## Operadores genéticos para representación real\n",
@@ -180,27 +180,34 @@
     "| Operador de Mutación | Implica cambiar aleatoriamente uno o más bits en un individuo. | Implica cambiar aleatoriamente el valor numérico de uno o más genes en un individuo. La forma exacta en que se realiza la mutación puede variar según el rango de valores permitidos y la estrategia específica utilizada. |\n",
     "\n",
     "\n",
-    "### Operador  de cruza\n",
+    "### Operadores  de cruza\n",
     "\n",
     "| Operador de Cruce     | Descripción                                       | Implementación en Python                                 |\n",
     "|-----------------------|---------------------------------------------------|----------------------------------------------------------|\n",
-    "| Cruce Aritmético      | Combina los genes de los padres mediante una media ponderada o una combinación lineal. | ```child = alpha * parent1 + (1 - alpha) * parent2```   |\n",
+    "| Cruce Aritmético      | Combina los genes de los padres mediante una media ponderada o una combinación lineal. | ```child1 = alpha * parent1 + (1 - alpha) * parent2```|\n",
+    "| | | ```child2 = (1 - alpha) * parent1 + alpha * parent2```|\n",
     "| Cruce Discreto        | Combina los genes de los padres seleccionando aleatoriamente un gen de uno de los padres. | ```child_gene = random.choice([parent1_gene, parent2_gene])``` |\n",
     "\n",
-    "#### Ejercicio: Implementar ambos operadores."
+    "Aritmético:\n",
+    "![](https://www.researchgate.net/publication/284810609/figure/fig6/AS:329629370994693@1455601174616/The-example-of-arithmetic-crossover_W640.jpg)\n",
+    "\n",
+    "Discreto:\n",
+    "![](https://www.researchgate.net/profile/Volker-Nissen/publication/319208631/figure/fig1/AS:530106935853056@1503398750946/Discrete-Recombination_W640.jpg)\n",
+    "\n",
+    "#### Ejercicio: Implementar ambos operadores y aplicar a dos pares de padres diferentes."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9da278cf",
+   "id": "75137142",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c2d972d7",
+   "id": "62ecc3df",
    "metadata": {},
    "source": [
     "### Operador de mutación"
@@ -209,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ab02ad39",
+   "id": "6ddc95e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b7d6531b",
+   "id": "ab4123bd",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb0a85f7",
+   "id": "6352e6b1",
    "metadata": {},
    "outputs": [],
    "source": []
